force-app/main/default/objects/Project_Skills__c/Project_Skills__c.object-meta.xml
<CustomObject>
    <label>Project Skills</label>
    <nameField>
        <displayFormat>PROJECT SKILL-{0000}</displayFormat>
        <label>Project Skills ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>