force-app/main/default/objects/Project_Skills__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>Project_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>