force-app/main/default/objects/Project_Skills__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Skills</relationshipLabel>
    <relationshipName>Project_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>