force-app/main/default/objects/Project_Skills__c/fields/Project_Skills__c.field-meta.xml
<CustomField>
    <fullName>Project_Skills__c</fullName>
    <label>Project Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>