force-app/main/default/objects/Project_Skills__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <referenceTo>Skills__c</referenceTo>
    <relationshipLabel>Project Skills</relationshipLabel>
    <relationshipName>Project_Skills</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>