force-app/main/default/objects/Project_Skills__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Skills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>